# vector_search

./: .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  global_utils.py  pyproject.toml
app/: database.py  main.py
app/api/: deps.py
app/api/v1/routers/: auth.py  users.py
app/core/: config.py  security.py
app/data_access_layer/: collections_list_DAL.py  exceptions.py
app/models/: database_models.py  user.py
app/schemas/: collection_list.py  user.py
app/services/: interpretation_parser.py  models.py  retrievers.py  splitter.py  testing.py  user.py
migrations/: env.py
migrations/versions/: bedc0592b10c_create_user_model.py
