[tool.poetry]
name = "vector_search"
version = "0.1.0"
description = "Search project"
authors = ["Izbushko <izbaizbushka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.0"
fastapi = "^0.105.0"
websocket = "^0.2.1"
psycopg2-binary = "^2.9.9"
sqlmodel = "^0.0.14"
pydantic-settings = "^2.1.0"
passlib = "^1.7.4"
asyncpg = "^0.29.0"
uvicorn = "^0.24.0.post1"
pyjwt = "^2.8.0"
pydantic = {extras = ["email"], version = "^2.5.2"}
python-multipart = "^0.0.6"
gunicorn = "^21.2.0"
bcrypt = "4.0.1"
langchain = "^0.2.16"
langchain-postgres = "^0.0.9"
striprtf = "^0.0.26"
tiktoken = "^0.7.0"
langchain-openai = "^0.1.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
